# AutoDropshipper

./: .dockerignore  .gitignore  README.md  docker-compose.yml  requirements.txt
docs/main/: flow.md  plan.md
docs/scrapers/: Ebay_scraper_flow.md
scraper/: Dockerfile  db_handler.py  find_product_ebay.py  requirements.txt  scrape_ebay.py  scrape_idealo.py
src/: Dockerfile  pyproject.toml
src/core/exceptions/: base.py  database_errors.py  scraping_errors.py
src/core/models/: ebay_listing.py  idealo_product.py  product_comparison.py
src/core/models/tests/: test_ebay_listing.py  test_idealo_product.py  test_product_comparison.py
src/core/utils/: product_matcher.py  profitability_calculator.py
src/database/handlers/: connection_handler.py
src/database/repositories/: base_repository.py  ebay_listing_repository.py  idealo_product_repository.py
src/database/repositories/tests/: test_ebay_listing_repository.py  test_idealo_product_repository.py
src/integrations/telegram/: telegram_client.py  telegram_formatter.py
src/scrapers/: __main__.py  main.py
src/scrapers/ebay/: ebay_parser.py  ebay_scraper.py  ebay_scraper_utils.py
src/scrapers/idealo/: idealo_parser.py  idealo_scraper.py  idealo_scraper_utils.py
src/scrapers/tests/: test_ebay_parser.py  test_idealo_parser.py  test_idealo_scraper.py
src/shared/config/: app_settings.py  ebay_settings.py  idealo_settings.py  telegram_settings.py
src/shared/logging/: log_setup.py
webapp/: Dockerfile  pyproject.toml
webapp/deal_board/: admin.py  apps.py  models.py  urls.py  views.py
webapp/deal_board/migrations/: 0001_initial.py  0002_alter_product_discount_percentage.py  0003_ebaylisting.py  0004_remove_product_discount_percentage_and_more.py  0005_add_last_ebay_check.py
webapp/deal_board/templates/: product_list.html
webapp/webapp/: settings.py  urls.py
